[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Ghost.gd" type="Script" id=1]
[ext_resource path="res://Modern tiles_Free/Characters_free/Bob_idle_16x16.png" type="Texture" id=2]
[ext_resource path="res://Audio/Ghost/Retro Weird Psych 18.wav" type="AudioStream" id=3]
[ext_resource path="res://Art/fog.png" type="Texture" id=4]
[ext_resource path="res://Art/light.png" type="Texture" id=5]
[ext_resource path="res://Audio/Ghost/Retro Weird Psych Long 16.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/red_light.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 19 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 156.83
angular_velocity_random = 0.62
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 51.48
scale = 0.32
scale_random = 0.1
color = Color( 1, 0, 0, 0.2 )

[node name="Ghost" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 0.498039, 0.498039, 1 )
position = Vector2( 0, -12.5 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true

[node name="Moan" type="AudioStreamPlayer2D" parent="."]
volume_db = -0.8
attenuation = 9.84915

[node name="Close" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
attenuation = 1.51572

[node name="eyes" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="eyes"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -4.662, -3.518 )
scale = Vector2( 0.02, 0.04 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="eyes"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 4.388, -3.186 )
scale = Vector2( 0.02, 0.04 )
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
amount = 100
lifetime = 2.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="RedLight" type="Node2D" parent="."]

[node name="light" type="Light2D" parent="RedLight"]
position = Vector2( 1.00001, 212.5 )
scale = Vector2( 4.875, 3.28906 )
texture = ExtResource( 7 )
energy = 1.35
shadow_enabled = true
shadow_color = Color( 1, 0, 0, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
